fixed dependencies and added facet id to the json response
Signed-off-by: Gunnar Wagenknecht <gunnar@wagenknecht.org>

--- a/apps/shop/bundles/net.cloudfree.apps.shop/build.properties
+++ b/apps/shop/bundles/net.cloudfree.apps.shop/build.properties
@@ -1,7 +1,8 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               OSGI-INF/shop-app-provider.xml
+source.. = src/
 additional.bundles = org.apache.solr.client.solrj,\
                      org.apache.solr.client.solrj.embedded,\
                      org.apache.solr.common,\
